# deep_research

./: .gitignore  langgraph.json  pyproject.toml  readme.md
src/deep_research/: deep_research_agent.py  deep_research_agent_v1.py  deep_research_agent_v2.py  deep_research_agent_v3.py  deep_research_agent_with_simple_loop.py  deep_research_agent_with_tool_calling.py
